--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,52 +1,62 @@
 worker_processes auto;
 
 events {
-  worker_connections 1024;
+    worker_connections 1024;
 }
 
 http {
-  include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
-  
-  sendfile      on;
-  keepalive_timeout  65;
-
-  access_log /var/log/nginx/access.log;
-  error_log /var/log/nginx/error.log;
-
-  server {
-    listen ${PORT};
-    server_name _;
-
-    # ---------- Health Check ----------
-    location = /health {
-      return 200 "Nginx is healthy ✅\n";
-      add_header Content-Type text/plain;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    
+    sendfile on;
+    keepalive_timeout 65;
+    
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+    
+    server {
+        listen ${PORT};
+        server_name _;
+        
+        # Root for frontend static files
+        root /usr/share/nginx/html;
+        index index.html;
+        
+        # ---------- Nginx Health Check ----------
+        location = /health {
+            return 200 "Nginx is healthy ✅\n";
+            add_header Content-Type text/plain;
+        }
+        
+        # ---------- API Proxy (MUST come before location /) ----------
+        location /api/ {
+            # Forward to backend with /api prefix
+            proxy_pass http://127.0.0.1:5000/api/;
+            proxy_http_version 1.1;
+            
+            # Headers
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Timeouts
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+        
+        # ---------- Static files with caching ----------
+        location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
+            expires 30d;
+            add_header Cache-Control "public, immutable";
+            access_log off;
+        }
+        
+        # ---------- Frontend - React Router (catch-all) ----------
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
     }
-
-    # ---------- API Proxy ----------
-    location /api {
-      proxy_pass http://127.0.0.1:5000;
-      proxy_http_version 1.1;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # ---------- Static cache ----------
-    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
-      root /usr/share/nginx/html;
-      expires 30d;
-      add_header Cache-Control "public, immutable";
-      access_log off;
-    }
-
-    # ---------- Frontend ----------
-    location / {
-      root /usr/share/nginx/html;
-      index index.html;
-      try_files $uri $uri/ /index.html;
-    }
-  }
 }
