--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,52 +11,49 @@ http {
     sendfile on;
     keepalive_timeout 65;
     
-    # Logging
     access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    error_log /var/log/nginx/error.log warn;
     
     server {
         listen ${PORT};
         server_name _;
         
-        # Root for frontend static files
+        # CRITICAL: Set root INSIDE server block
         root /usr/share/nginx/html;
         index index.html;
         
-        # ---------- Nginx Health Check ----------
+        # Nginx health check
         location = /health {
-            return 200 "Nginx is healthy ✅\n";
+            access_log off;
+            return 200 "Nginx OK\n";
             add_header Content-Type text/plain;
         }
         
-        # ---------- API Proxy (MUST come before location /) ----------
+        # API routes - proxy to backend
         location /api/ {
-            # Forward to backend with /api prefix
             proxy_pass http://127.0.0.1:5000/api/;
             proxy_http_version 1.1;
-            
-            # Headers
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Timeouts
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
+            proxy_cache_bypass $http_upgrade;
         }
         
-        # ---------- Static files with caching ----------
-        location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|webm|mp4)$ {
-            expires 30d;
+        # Static files with proper MIME types
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|json)$ {
+            root /usr/share/nginx/html;
+            expires 1y;
             add_header Cache-Control "public, immutable";
-            access_log off;
+            try_files $uri =404;
         }
         
-        # ---------- Frontend - React Router (catch-all) ----------
+        # React Router - serve index.html for all other routes
         location / {
-            try_files $uri $uri/ /index.html;
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html =404;
         }
     }
 }
